--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -796,7 +796,10 @@
       </a>
     </div>
     <div style="font-size: 12px; color: #7f8c8d;">Iberostar Playa Paraiso - MX | Par 72/6,701 yards</div>
-    <div style="font-size: 11px; color: #777; font-weight: 700; margin-top: 2px;">Rank Impact: 136 | SG: 0.35 | Weighted Pts: 54.06 | WAGR Power: TBD / Pts: TBD</div>
+    <div style="font-size: 11px; color: #777; font-weight: 700; margin-top: 2px;">
+      Rank Impact: <span style="color: #e11d48;">▲</span> 136 | SG: 0.35 | Weighted Pts: 54.06<br>
+      WAGR Power: TBD / Pts: TBD
+    </div>
     <div class="mobile-status-bar">
       <div class="ms-item"><span class="ms-label">R1-R2-R3</span><span class="ms-value" style="font-weight: 800;"><span style="color: #e11d48;">70</span>-75-<span style="color: #e11d48;">71</span></span></div>
       <div class="ms-item"><span class="ms-label">TOTAL</span><span class="ms-value" style="font-weight: 800;">215</span></div>
@@ -814,7 +817,17 @@
           <tr style="background-color: #fcfdfe;">
             <td class="col-left">
               <div style="font-weight: 600; font-size: 13px;">Feb 23-24, 2026</div>
-              <div style="font-weight: 800; color: #0c2340; font-size: 16px; margin: 2px 0;">Lone Star Collegiate (UTSA)</div>
+              <div style="display: flex; align-items: center; flex-wrap: wrap; gap: 6px;">
+              <div style="font-weight: 800; color: #0c2340; font-size: 16px; margin: 2px 0;">Military City Collegiate (UTSA)</div>
+               <a href="https://scoreboard.clippd.com/tournaments/238654/scoring/participants" target="_blank" style="display: flex; align-items: center; text-decoration: none;">
+                <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="#0c2340" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round">
+                 <path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path>
+                  <polyline points="15 3 21 3 21 9"></polyline>
+                   <line x1="10" y1="14" x2="21" y2="3"></line>
+                 </svg>
+               </a>
+                  </div>
+              
               <div style="font-size: 12px; color: #7f8c8d;">TPC San Antonio Canyons - TX</div>
               <div class="mobile-status-bar">
                 <div class="ms-item"><span class="ms-label">R1-R2-R3</span><span class="ms-value">-</span></div>
