--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -1346,51 +1346,51 @@
     <h3 style="font-size: 18px; color: #0c2340; margin: 0; border-left: 5px solid #0c2340; padding-left: 15px; font-weight: 900; letter-spacing: 1px; text-transform: uppercase; display: flex; align-items: center; flex-wrap: wrap; gap: 8px;">
       <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="#0c2340" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><path d="M21.21 15.89A10 10 0 1 1 8 2.83"></path><path d="M22 12A10 10 0 0 0 12 2v10z"></path></svg>
       ADVANCED COMPETITIVE ANALYSIS 
-      <span style="font-size: 13px; color: #7f8c8d; font-weight: 600; letter-spacing: 0px;">(2026 Freshman Spring Season)</span>
+      <span style="font-size: 13px; color: #7f8c8d; font-weight: 600; letter-spacing: 0px;">(Freshman Season — 15-Round Cumulative)</span>
     </h3>
   </div>
   <div style="border: 1px solid #e2e8f0; border-radius: 20px; padding: 35px; background: #ffffff; box-shadow: 0 10px 40px rgba(0,0,0,0.05);">
     <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(240px, 1fr)); gap: 20px; margin-bottom: 35px;">
       <div style="padding: 25px; background: #ffffff; border-radius: 15px; text-align: center; border: 1px solid #edf2f7; box-shadow: 0 4px 12px rgba(0,0,0,0.03);">
-        <span style="display: block; font-size: 11px; color: #64748b; font-weight: 800; text-transform: uppercase; letter-spacing: 1.5px; margin-bottom: 10px;">Head-to-Head Record</span>
+        <span style="display: block; font-size: 11px; color: #64748b; font-weight: 800; text-transform: uppercase; letter-spacing: 1.5px; margin-bottom: 10px;">Head-to-Head Performance</span>
         <span style="font-size: 24px; font-weight: 900; color: #0c2340;">289-98-12</span>
-        <div style="display: block; font-size: 13px; color: #64748b; margin-top: 5px; font-weight: 700;">Win Rate: 70.1%</div>
-        <div style="display: inline-block; font-size: 13px; color: #806600; margin-top: 10px; font-weight: 800; background: rgba(128, 102, 0, 0.08); padding: 4px 15px; border-radius: 25px;">STATUS: 15-Round Cumulative</div>
+        <div style="display: block; font-size: 13px; color: #64748b; margin-top: 5px; font-weight: 700;">Win Rate: 72.4%</div>
+        <div style="display: inline-block; font-size: 13px; color: #806600; margin-top: 10px; font-weight: 800; background: rgba(128, 102, 0, 0.08); padding: 4px 15px; border-radius: 25px;">Status: Cumulative Freshman Data Profile (15 Rounds)</div>
       </div>
       <div style="padding: 25px; background: #ffffff; border-radius: 15px; text-align: center; border: 1px solid #edf2f7; box-shadow: 0 4px 12px rgba(0,0,0,0.03);">
-        <span style="display: block; font-size: 11px; color: #64748b; font-weight: 800; text-transform: uppercase; letter-spacing: 1.5px; margin-bottom: 10px;">Scoring Consistency</span>
+        <span style="display: block; font-size: 11px; color: #64748b; font-weight: 800; text-transform: uppercase; letter-spacing: 1.5px; margin-bottom: 10px;">Scoring Consistency & Reliability</span>
         <span style="font-size: 24px; font-weight: 900; color: #0c2340;">100% Counting Score</span>
-        <div style="display: block; font-size: 13px; color: #64748b; margin-top: 5px; font-weight: 700;">Every Round Contributed</div>
-        <div style="display: inline-block; font-size: 13px; color: #1a73e8; margin-top: 10px; font-weight: 800; background: rgba(26, 115, 232, 0.08); padding: 4px 15px; border-radius: 25px;">Sub-Metric: 15/15 Rounds Contributed</div>
+        <div style="display: block; font-size: 13px; color: #64748b; margin-top: 5px; font-weight: 700;">All competitive rounds contributed to the team total</div>
+        <div style="display: inline-block; font-size: 13px; color: #1a73e8; margin-top: 10px; font-weight: 800; background: rgba(26, 115, 232, 0.08); padding: 4px 15px; border-radius: 25px;">Metric: 15/15 Rounds Recorded</div>
       </div>
     </div>
     <div style="margin-top: 40px;">
-      <b style="font-size: 16px; color: #0c2340; display: block; margin-bottom: 20px; border-bottom: 2px solid #f1f5f9; padding-bottom: 10px; font-weight: 900; text-transform: uppercase;">Spring Season Objectives:</b>
+      <b style="font-size: 16px; color: #0c2340; display: block; margin-bottom: 20px; border-bottom: 2px solid #f1f5f9; padding-bottom: 10px; font-weight: 900; text-transform: uppercase;">Competitive Context & Technical Application:</b>
       <div style="background: #ffffff; padding: 25px; border-top: 6px solid #0c2340; border-radius: 12px; box-shadow: 0 5px 15px rgba(0,0,0,0.05); margin-bottom: 20px; border-left: 1px solid #f1f5f9; border-right: 1px solid #f1f5f9; border-bottom: 1px solid #f1f5f9;">
         <h4 style="margin: 0 0 10px 0; color: #0c2340; font-size: 16px; font-weight: 800; display: flex; align-items: center; gap: 8px;">
           <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="10"></circle><line x1="22" y1="12" x2="18" y2="12"></line><line x1="6" y1="12" x2="2" y2="12"></line><line x1="12" y1="6" x2="12" y2="2"></line><line x1="12" y1="22" x2="12" y2="18"></line></svg>
-          Strategic Course Management
+          Course Management & Technical Integration
         </h4>
         <p style="margin: 0; color: #4a5568; font-size: 15px; line-height: 1.8; text-align: justify; word-break: keep-all;">
-          Current focus is the <b>seamless integration of Bryan Gathright’s technical directives</b> into competitive decision-making. High priority is placed on internalizing swing-plane adjustments to <b>minimize unforced errors</b> and improve proximity metrics on Par-4 holes for stabilized scoring.
+          Competitive rounds reflect the application of <b>technical directives implemented following Fall review</b>, including swing-plane adjustments and decision-making patterns on Par-4 holes.
         </p>
       </div>
       <div style="background: #ffffff; padding: 25px; border-top: 6px solid #546e7a; border-radius: 12px; box-shadow: 0 5px 15px rgba(0,0,0,0.05); margin-bottom: 20px; border-left: 1px solid #f1f5f9; border-right: 1px solid #f1f5f9; border-bottom: 1px solid #f1f5f9;">
         <h4 style="margin: 0 0 10px 0; color: #455a64; font-size: 16px; font-weight: 800; display: flex; align-items: center; gap: 8px;">
           <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><path d="M12 2L2 7l10 5 10-5-10-5z"></path><path d="M2 17l10 5 10-5"></path><path d="M2 12l10 5 10-5"></path></svg>
-          Scoring Availability & Contribution
+          Scoring Availability & Team Contribution
         </h4>
         <p style="margin: 0; color: #4a5568; text-align: justify; word-break: keep-all;">
-          Targeting a <b>100% Counting Score rate</b> across all tournament rounds as a primary technical objective. Prioritizing consistent data contribution to the overall UTSA team score.
+          Across all recorded rounds during the freshman season, <b>scoring output was logged as a counting score</b> for the team total under varying course conditions.
         </p>
       </div>
       <div style="background: #ffffff; padding: 25px; border-top: 6px solid #806600; border-radius: 12px; box-shadow: 0 5px 15px rgba(0,0,0,0.05); border-left: 1px solid #f1f5f9; border-right: 1px solid #f1f5f9; border-bottom: 1px solid #f1f5f9;">
         <h4 style="margin: 0 0 10px 0; color: #806600; font-size: 16px; font-weight: 800; display: flex; align-items: center; gap: 8px;">
           <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><path d="M18 8A6 6 0 0 0 6 8c0 7-3 9-3 9h18s-3-2-3-9"></path><path d="M13.73 21a2 2 0 0 1-3.46 0"></path></svg>
-          Statistical Progression & Learning Curve
+          Statistical Tracking & Data Review
         </h4>
         <p style="margin: 0; color: #4a5568; font-size: 15px; line-height: 1.8; text-align: justify; word-break: keep-all;">
-          As a freshman, emphasis is placed on leveraging <b>post-event analytics</b> to identify developmental benchmarks. <b>Strokes Gained (SG)</b> and field-adjusted metrics are systematically reviewed to align training intensity with competitive requirements, ensuring a consistent seasonal progression.
+          Post-event performance data was reviewed using Clippd and Scoreboard metrics to document round-level outputs. At the Compadres Collegiate, results were recorded as <b>T3 with SG: +0.35 and Event Rank Impact: +136</b>, contributing to the cumulative freshman-season data set.
         </p>
       </div>
     </div>
