--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -1295,14 +1295,14 @@
     </div>
 
     
-    <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 25px; margin-bottom: 30px;">
+   <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 25px; margin-bottom: 30px;">
       <div style="border-top: 1px solid #f1f1f1; padding-top: 20px;">
         <h4 style="font-size: 14px; color: #0c2340; margin-bottom: 12px; font-weight: 800; display: flex; align-items: center; gap: 8px;">
           <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5"><path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"></path><circle cx="9" cy="7" r="4"></circle><path d="M23 21v-2a4 4 0 0 0-3-3.87"></path><path d="M16 3.13a4 4 0 0 1 0 7.75"></path></svg>
           Competitive Lineup & Team Contribution
         </h4>
         <p style="font-size: 14px; color: #4a5568; line-height: 1.7; margin: 0; text-align: justify; word-break: keep-all;">
-          Focusing on <b>maximizing scoring contribution</b> for the UTSA Travel Squad. Current metrics are prioritized to maintain competitive consistency within the lineup and support team-scoring objectives for the 2026 Spring season.
+          Joshua competed as part of the <b>UTSA travel squad lineup</b> during Spring events. At the Compadres Collegiate, his score was recorded as a <b>counting score in all three rounds</b>. UTSA completed the event with a <b>third-place team finish</b>.
         </p>
       </div>
       <div style="border-top: 1px solid #f1f1f1; padding-top: 20px;">
@@ -1311,7 +1311,7 @@
           Performance Targets & Metric Calibration
         </h4>
         <p style="font-size: 14px; color: #4a5568; line-height: 1.7; margin: 0; text-align: justify; word-break: keep-all;">
-          While maintaining <b>stability in Par 3 and Par 5 scoring efficiency</b>, current technical focus is directed toward <b>optimizing Par 4 saving rates</b>. Strategic training protocols are being implemented to minimize scoring variance and enhance scramble recovery metrics under competitive conditions.
+          Event rounds were played at <b>Iberostar Playa Paraíso GC</b> (Par 72, 6,683 yards). Field scoring averages were recorded at <b>77.10 overall</b>, with daily averages of 78.04 (R1), 77.25 (R2), and 76.00 (R3). Joshua completed the event at <b>Even Par relative to the field scoring baseline</b>.
         </p>
       </div>
       <div style="border-top: 1px solid #f1f1f1; padding-top: 20px;">
@@ -1320,7 +1320,7 @@
           Statistical Reliability
         </h4>
         <p style="font-size: 14px; color: #4a5568; line-height: 1.7; margin: 0; text-align: justify; word-break: keep-all;">
-          Focusing on a <b>100% Counting Score rate</b> to maintain consistent data contribution. This objective ensures that every competitive round serves as a reliable asset toward the UTSA team scoring aggregate.
+          <b>Counting Score Rate: 100%</b> (3/3 Rounds — Event) | <b>100%</b> (15/15 Rounds — Freshman Season Cumulative). All recorded competitive rounds were logged as counting scores toward the UTSA team aggregate, confirming high scoring-floor stability.
         </p>
       </div>
       <div style="border-top: 1px solid #f1f1f1; padding-top: 20px;">
@@ -1329,12 +1329,12 @@
           Post-Round Analysis & Training Alignment
         </h4>
         <p style="font-size: 14px; color: #4a5568; line-height: 1.7; margin: 0; text-align: justify; word-break: keep-all;">
-          Competitive logs are maintained to <b>identify performance gaps</b> and define technical objectives. Each round’s data is used to <b>calibrate practice protocols</b>, ensuring systematic improvement throughout the Spring season.
+          Round-by-round competitive data was logged for scoring distribution and field-relative reference. Event results, including round scores and field averages, were <b>archived as part of the cumulative freshman-season data record</b> to calibrate training protocols.
         </p>
       </div>
     </div>
     <div style="text-align: right; border-top: 1px solid #edf2f7; padding-top: 15px;">
-      <span style="font-size: 10px; color: #94a3b8; font-weight: 700; text-transform: uppercase; letter-spacing: 1px;">Last Updated: Jan 2026</span>
+      <span style="font-size: 10px; color: #94a3b8; font-weight: 700; text-transform: uppercase; letter-spacing: 1px;">Last Updated: Feb 4, 2026</span>
     </div>
   </div>
 </div>
