--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -1238,7 +1238,7 @@
         Performance Stability & Metrics
       </h4>
       <p style="margin: 0; font-size: 15px; color: #4a5568; line-height: 1.8; text-align: justify; word-break: keep-all;">
-        Performance metrics and scoring data will be updated post-competition. Current focus is on <b>stabilizing ball-striking</b> and <b>minimizing short-game variance</b> under tournament conditions.
+        Round-level scoring data is tracked across competitive events, including <b>field-relative scoring position, round variance, and counting score availability</b>. Metrics are logged on a per-round basis for <b>cumulative freshman-season reference</b>.
       </p>
     </div>
     <div style="background: #f8fafc; padding: 25px; border-left: 6px solid #2b6cb0; border-radius: 8px; box-shadow: 0 4px 15px rgba(0,0,0,0.03); margin-bottom: 20px; border: 1px solid #e2e8f0; border-left-width: 6px;">
@@ -1247,7 +1247,7 @@
         Course Analysis & Team Readiness
       </h4>
       <p style="margin: 0; font-size: 15px; color: #4a5568; line-height: 1.8; text-align: justify; word-break: keep-all;">
-        Course-specific strategies and <b>internal qualifying metrics</b> will be updated systematically. Data on competitive course setups and <b>performance transparency</b> are maintained to align with UTSA team standards and professional preparation.
+        Course-specific data, including <b>par, yardage, and field scoring averages</b>, is recorded for each event. Competition rounds logged as part of the <b>UTSA travel squad</b> are archived with corresponding team lineup and counting score designation.
       </p>
     </div>
     <div style="background: #fffdfa; padding: 25px; border-left: 6px solid #806600; border-radius: 8px; box-shadow: 0 4px 15px rgba(0,0,0,0.03); border: 1px solid #f9f0e3; border-left-width: 6px;">
@@ -1256,11 +1256,13 @@
         Advanced Coaching & Development
       </h4>
       <p style="margin: 0; font-size: 15px; color: #4a5568; line-height: 1.8; text-align: justify; word-break: keep-all;">
-        Following the integration of <b>Bryan Gathright’s technical protocols</b>, longitudinal data on swing mechanics and competitive scoring will be tracked throughout the Spring season. Preparation for <b>NCAA Regional qualification</b> remains the primary performance target.
+        Technical inputs introduced under <b>Bryan Gathright</b> are documented within longitudinal performance logs. <b>Swing-related variables</b> and competitive scoring outputs are tracked as part of the cumulative freshman-season data set.
       </p>
+     </div>
     </div>
-  </div>
-</div>
+   </div>
+
+  
 </div>
   
 
