--- a/news-media.html
+++ b/news-media.html
@@ -766,26 +766,39 @@
 
    
 
-    <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 20px; margin-top: 20px;">
-      <a href="https://www.google.com/search?q=JOSHUA+HONG+GOLF" target="_blank" style="text-decoration: none;">
-        <div style="background-color: #0c2340; color: white; text-align: center; padding: 16px; border-radius: 12px; font-weight: 800; transition: 0.3s; font-size: 14px; display: flex; align-items: center; justify-content: center; box-shadow: 0 4px 15px rgba(12, 35, 64, 0.25); letter-spacing: 0.3px;">
-          <span style="margin-right: 12px; display: flex; align-items: center;">
-            <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="#ffffff" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round">
-              <circle cx="11" cy="11" r="8"></circle>
-              <line x1="21" y1="21" x2="16.65" y2="16.65"></line>
-            </svg>
-          </span>
-          Latest News on Google
-        </div>
-      </a>
-      
-      <a href="https://goutsa.com/sports/mens-golf/roster/player/joshua-hong#related" target="_blank" style="text-decoration: none;">
-        <div style="background-color: #ff5a00; color: white; text-align: center; padding: 16px; border-radius: 10px; font-weight: bold; transition: 0.3s; font-size: 14px; display: flex; align-items: center; justify-content: center; box-shadow: 0 4px 12px rgba(255, 90, 0, 0.2);">
-          <span style="background: white; color: #ff5a00; padding: 2px 6px; border-radius: 4px; font-size: 10px; font-weight: 900; margin-right: 10px;">UTSA</span>
-          Official Joshua News
-        </div>
-      </a>
+    <div style="display: grid; grid-template-columns: repeat(2, 1fr); gap: 15px; margin-top: 20px; max-width: 900px; margin-left: auto; margin-right: auto;">
+  <a href="https://www.google.com/search?q=JOSHUA+HONG+GOLF" target="_blank" style="text-decoration: none;">
+    <div style="background-color: #0c2340; color: white; text-align: center; padding: 16px; border-radius: 12px; font-weight: 800; transition: 0.3s; font-size: 13px; display: flex; align-items: center; justify-content: center; box-shadow: 0 4px 15px rgba(12, 35, 64, 0.25); letter-spacing: 0.3px; min-height: 54px; box-sizing: border-box;">
+      <span style="margin-right: 8px; display: flex; align-items: center;">
+        <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="#ffffff" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round">
+          <circle cx="11" cy="11" r="8"></circle>
+          <line x1="21" y1="21" x2="16.65" y2="16.65"></line>
+        </svg>
+      </span>
+      Latest News
     </div>
+  </a>
+  
+  <a href="https://goutsa.com/sports/mens-golf/roster/player/joshua-hong#related" target="_blank" style="text-decoration: none;">
+    <div style="background-color: #ff5a00; color: white; text-align: center; padding: 16px; border-radius: 12px; font-weight: bold; transition: 0.3s; font-size: 13px; display: flex; align-items: center; justify-content: center; box-shadow: 0 4px 12px rgba(255, 90, 0, 0.2); min-height: 54px; box-sizing: border-box;">
+      <span style="background: white; color: #ff5a00; padding: 2px 6px; border-radius: 4px; font-size: 9px; font-weight: 900; margin-right: 8px;">UTSA</span>
+      Official Profile
+    </div>
+  </a>
+</div>
+
+<style>
+  /* 모바일에서 버튼이 너무 작아질 경우 세로로 자동 전환 */
+  @media (max-width: 480px) {
+    div[style*="grid-template-columns: repeat(2, 1fr)"] {
+      grid-template-columns: 1fr !important;
+      gap: 10px !important;
+    }
+  }
+</style>
+
+
+    
 
     <div style="text-align: center; border-top: 1px solid #eee; padding-top: 20px; margin-top: 40px;">
       <p style="font-size: 11px; color: #aaa; text-transform: uppercase; letter-spacing: 2px; line-height: 1.8;">
