--- a/reference-links.html
+++ b/reference-links.html
@@ -305,10 +305,11 @@
       
       <div style="display: flex; flex-direction: column; gap: 1px; padding-left: 2px;">
         
-        <a href="https://scoreboard.clippd.com/tournaments/239018/scoring/player" target="_blank" style="display: flex; align-items: center; justify-content: space-between; padding: 10px 12px; text-decoration: none; border-radius: 6px; transition: background 0.2s;" onmouseover="this.style.backgroundColor='#f8fafc'" onmouseout="this.style.backgroundColor='transparent'">
+      <a href="https://scoreboard.clippd.com/tournaments/239018/scoring/player" target="_blank" style="display: flex; align-items: center; justify-content: space-between; padding: 10px 12px; text-decoration: none; border-radius: 6px; transition: background 0.2s;" onmouseover="this.style.backgroundColor='#f8fafc'" onmouseout="this.style.backgroundColor='transparent'">
           <div style="display: flex; align-items: center;">
             <span style="color: #806600; margin-right: 12px; font-size: 14px;">•</span>
-            <span style="color: #334155; font-size: 14px; font-weight: 600;">Compadres Collegiate (UTRGV)</span>
+            <span style="color: #0c2340; font-size: 14px; font-weight: 900;">Compadres Collegiate (UTRGV)</span>
+            <span style="margin-left: 10px; background-color: #0c2340; color: white; font-size: 9px; font-weight: 800; padding: 2px 6px; border-radius: 3px; letter-spacing: 0.3px; text-transform: uppercase;">2026 Spring Opener</span>
             <svg width="12" height="12" viewBox="0 0 24 24" fill="none" stroke="#94a3b8" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round" style="margin-left: 8px;"><path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path><polyline points="15 3 21 3 21 9"></polyline><line x1="10" y1="14" x2="21" y2="3"></line></svg>
           </div>
           <span style="color: #94a3b8; font-family: 'Roboto Mono', monospace; font-size: 12px; text-align: right;">Feb 2-4, 2026</span>
