--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -797,7 +797,7 @@
     <div style="font-size: 12px; color: #7f8c8d;">Iberostar Playa Paraiso - MX | Par 72/6,701 yards</div>
     <div style="font-size: 11px; color: #777; font-weight: 700; margin-top: 2px;">
       Rank Impact: <span style="color: #e11d48;">▲</span> 136 | SG: 0.35 | Weighted Pts: 54.06<br>
-      WAGR Power: TBD / Pts: TBD
+      WAGR Pwr: TBD / Pts: TBD
     </div>
     <div class="mobile-status-bar">
       <div class="ms-item"><span class="ms-label">R1-R2-R3</span><span class="ms-value" style="font-weight: 800;"><span style="color: #e11d48;">70</span>-75-<span style="color: #e11d48;">71</span></span></div>
@@ -1055,7 +1055,7 @@
                   <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="#c98a2e" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path><polyline points="15 3 21 3 21 9"></polyline><line x1="10" y1="14" x2="21" y2="3"></line></svg>
                 </a>
               </div>
-              <div style="font-size: 11px; color: #c98a2e; font-weight: 700; letter-spacing: -0.2px;">WAGR Power: 806.3420 / Pts: 6.1052</div>
+              <div style="font-size: 11px; color: #c98a2e; font-weight: 700; letter-spacing: -0.2px;">WAGR Pwr: 806.3420 / Pts: 6.1052</div>
               <div style="font-size: 11px; color: #475569; font-weight: 800; margin-top: 2px;">Head-to-Head: 42-37-5</div>
               <div class="mobile-score-bar">
                 <div class="m-item"><span class="m-label">R1-R2-R3</span><span class="m-value">71-73-72</span></div>
@@ -1100,7 +1100,7 @@
                   <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="#0c2340" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path><polyline points="15 3 21 3 21 9"></polyline><line x1="10" y1="14" x2="21" y2="3"></line></svg>
                 </a>
               </div>
-              <div style="font-size: 11px; color: #777; font-weight: 700;">WAGR Power: 360.1597 / Pts: 3.1971</div>
+              <div style="font-size: 11px; color: #777; font-weight: 700;">WAGR Pwr: 360.1597 / Pts: 3.1971</div>
               <div class="mobile-score-bar">
                 <div class="m-item"><span class="m-label">R1-R2-R3</span><span class="m-value">75-73-74</span></div>
                 <div class="m-item"><span class="m-label">TOTAL</span><span class="m-value">222</span></div>
@@ -1122,7 +1122,7 @@
                   <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="#0c2340" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path><polyline points="15 3 21 3 21 9"></polyline><line x1="10" y1="14" x2="21" y2="3"></line></svg>
                 </a>
               </div>
-              <div style="font-size: 11px; color: #777; font-weight: 700;">WAGR Power: 129.0694 / Pts: 3.3178</div>
+              <div style="font-size: 11px; color: #777; font-weight: 700;">WAGR Pwr: 129.0694 / Pts: 3.3178</div>
               <div class="mobile-score-bar">
                 <div class="m-item"><span class="m-label">R1-R2-R3</span><span class="m-value"><span style="color:#e53935;">71-71</span>-76</span></div>
                 <div class="m-item"><span class="m-label">TOTAL</span><span class="m-value">218</span></div>
@@ -1144,7 +1144,7 @@
                   <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="#0c2340" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path><polyline points="15 3 21 3 21 9"></polyline><line x1="10" y1="14" x2="21" y2="3"></line></svg>
                 </a>
               </div>
-              <div style="font-size: 11px; color: #777; font-weight: 700;">WAGR Power: 232.6656 / Pts: 4.9097</div>
+              <div style="font-size: 11px; color: #777; font-weight: 700;">WAGR Pwr: 232.6656 / Pts: 4.9097</div>
               <div class="mobile-score-bar">
                 <div class="m-item"><span class="m-label">R1-R2-R3</span><span class="m-value">74-<span style="color:#e53935;">71-70</span></div>
                 <div class="m-item"><span class="m-label">TOTAL</span><span class="m-value">215</span></div>
@@ -1166,7 +1166,7 @@
                   <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="#0c2340" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path><polyline points="15 3 21 3 21 9"></polyline><line x1="10" y1="14" x2="21" y2="3"></line></svg>
                 </a>
               </div>
-              <div style="font-size: 11px; color: #777; font-weight: 700;">WAGR Power: 230.8799 / Pts: 5.3735</div>
+              <div style="font-size: 11px; color: #777; font-weight: 700;">WAGR Pwr: 230.8799 / Pts: 5.3735</div>
               <div class="mobile-score-bar">
                 <div class="m-item"><span class="m-label">R1-R2-R3</span><span class="m-value" style="color:#e53935;">70-70-69</span></div>
                 <div class="m-item"><span class="m-label">TOTAL</span><span class="m-value" style="color:#e53935;">209</span></div>
