--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 <title>Joshua Hong | Korean-Mexican NCAA D1 Golfer | UTSA Official Site</title>
 <meta name="description" content="Official site of Joshua Hong, a Korean-Mexican NCAA Division I golfer at UTSA. Explore career records, tournament highlights, and latest media coverage.">
+<meta name="keywords" content="Joshua Hong Golf, Joshua Hong UTSA, 멕시코 골프 선수 자슈아 홍, 자슈아 홍 골프, Joshua Hong Mexico, NCAA D1 Golfer, UTSA Men's Golf">
 <link rel="canonical" href="https://www.joshuahonggolf.com/index.html">
 
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-H1JW8YBDZ8"></script>
