--- a/junior-career.html
+++ b/junior-career.html
@@ -7,6 +7,7 @@
 
   <title>Junior Career Archive | Joshua Hong Golf | WAGR, JGS & FMG Records</title>
   <meta name="description" content="A historical archive of Joshua Hong's junior golf career. Comprehensive record of tournament results, WAGR, JGS, and FMG (Federación Mexicana de Golf) rankings prior to UTSA.">
+  <meta name="keywords" content="Joshua Hong Golf, Joshua Hong UTSA, 멕시코 골프 선수 자슈아 홍, 자슈아 홍 골프, Joshua Hong Mexico, NCAA D1 Golfer, UTSA Men's Golf">
   <link rel="canonical" href="https://www.joshuahonggolf.com/junior-career.html">
   
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-H1JW8YBDZ8"></script>
