--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -13,6 +13,7 @@
   </script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <meta name="keywords" content="Joshua Hong Golf, Joshua Hong UTSA, 멕시코 골프 선수 자슈아 홍, 자슈아 홍 골프, Joshua Hong Mexico, NCAA D1 Golfer, UTSA Men's Golf">
   <title>NCAA Stats | Joshua Hong Golf</title>
 
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-H1JW8YBDZ8"></script>
