--- a/news-media.html
+++ b/news-media.html
@@ -7,7 +7,8 @@
 
 <title>News & Interviews Archive | Joshua Hong Golf | Korean-Mexican NCAA D1 Golfer</title>
 <meta name="description" content="A complete media archive of Joshua Hong, featuring news, interviews, and coverage from his Junior career through NCAA Division I at UTSA. Explore his full competitive journey.">
-<link rel="canonical" href="https://www.joshuahonggolf.com/news-media.html">
+<meta name="keywords" content="Joshua Hong Golf, Joshua Hong UTSA, 멕시코 골프 선수 자슈아 홍, 자슈아 홍 골프, Joshua Hong Mexico, NCAA D1 Golfer, UTSA Men's Golf">
+  <link rel="canonical" href="https://www.joshuahonggolf.com/news-media.html">
   
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-H1JW8YBDZ8"></script>
 <script>
