--- a/reference-links.html
+++ b/reference-links.html
@@ -7,6 +7,7 @@
 
   <title>References & Official Links | Joshua Hong Golf | UTSA</title>
   <meta name="description" content="Official external links and verified references for Joshua Hong. Includes UTSA Men's Golf roster profile, tournament scoring portals, and professional golf associations.">
+  <meta name="keywords" content="Joshua Hong Golf, Joshua Hong UTSA, 멕시코 골프 선수 자슈아 홍, 자슈아 홍 골프, Joshua Hong Mexico, NCAA D1 Golfer, UTSA Men's Golf">
   <link rel="canonical" href="https://www.joshuahonggolf.com/reference-links.html">
   
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-H1JW8YBDZ8"></script>
