--- a/fall-2025-archive.html
+++ b/fall-2025-archive.html
@@ -7,6 +7,7 @@
 
   <title>NCAA Statistics & Records | Joshua Hong Golf | UTSA</title>
   <meta name="description" content="Comprehensive NCAA Division I scoring records and performance analysis for Joshua Hong at UTSA. Detailed tracking of tournament finishes and season-by-season scoring averages.">
+  <meta name="keywords" content="Joshua Hong Golf, Joshua Hong UTSA, 멕시코 골프 선수 자슈아 홍, 자슈아 홍 골프, Joshua Hong Mexico, NCAA D1 Golfer, UTSA Men's Golf">
   <link rel="canonical" href="https://www.joshuahonggolf.com/ncaa-stats.html">
   
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-H1JW8YBDZ8"></script>
