--- a/test-1.html
+++ b/test-1.html
@@ -327,3 +327,21 @@ new Chart(ctxInternal, {
   }
 });
 </script>
+
+
+
+
+
+<div style="margin-top: 50px; padding: 20px; border-top: 1px solid #eee; text-align: center;">
+  <p style="color: #94a3b8; font-size: 11px; margin-bottom: 5px; letter-spacing: 0.2px;">
+    Official Site of Joshua Hong | NCAA Division I Men's Golf | UTSA Roadrunners
+  </p>
+  <p style="color: #cbd5e1; font-size: 10px; font-weight: 400; letter-spacing: -0.2px;">
+    멕시코 골프 선수 자슈아 홍 (Joshua Hong Golf) 공식 기록 포트폴리오. Korean-Mexican NCAA D1 Golfer.
+  </p>
+  <p style="color: #e2e8f0; font-size: 9px; margin-top: 8px;">
+    © 2026 Joshua Hong. All Rights Reserved.
+  </p>
+</div>
+
+
