--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -1735,12 +1735,15 @@
 </div>
   
 
-  <div style="text-align: center; padding-top: 20px; margin: 40px 15px 0; border-top: 1px solid #f1f1f1;">
+  <div style="text-align: center; border-top: 1px solid #eee; padding: 30px 20px 60px 20px;">
+  <p style="color: #cbd5e1; font-size: 10px; font-weight: 400; letter-spacing: -0.2px; margin-bottom: 8px;">
+    멕시코 골프 선수 자슈아 홍 (Joshua Hong Golf) 공식 기록 사이트. Korean-Mexican NCAA D1 Golfer.
+  </p>
     <p style="font-size: 11px; color: #aaa; text-transform: uppercase; letter-spacing: 2px; line-height: 1.8;">
       Performance Data<br>
       Official Credentials • Joshua Hong
     </p>
-  </div>
+</div>
 </div>
 
           </body>
