--- a/index.html
+++ b/index.html
@@ -1248,7 +1248,8 @@ gtag('config', 'G-H1JW8YBDZ8');
     멕시코 골프 선수 자슈아 홍 (Joshua Hong Golf) 공식 기록 페이지. Korean-Mexican NCAA D1 Golfer.
   </p>
   <p style="font-size: 11px; color: #bbb; text-transform: uppercase; letter-spacing: 3px; margin: 0;">
-    Career Overview • Official Profile • Joshua Hong
+    Career Overview <br> 
+    Official Profile • Joshua Hong
   </p>
 </div>
 
