--- a/fall-2025-archive.html
+++ b/fall-2025-archive.html
@@ -638,7 +638,7 @@
 
    <div style="text-align: center; border-top: 1px solid #eee; padding: 30px 20px 60px 20px;">
   <p style="color: #cbd5e1; font-size: 10px; font-weight: 400; letter-spacing: -0.2px; margin-bottom: 8px;">
-    멕시코 골프 선수 자슈아 홍 (Joshua Hong Golf) 공식 기록 페이지. Korean-Mexican NCAA D1 Golfer.
+    멕시코 골프 선수 자슈아 홍 (Joshua Hong Golf) 공식 기록 페이지
   </p>
     <p style="font-size: 11px; color: #aaa; text-transform: uppercase; letter-spacing: 2px; line-height: 1.8;">
       Performance Data<br>
