--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -670,7 +670,11 @@
             </div>
         </div>
 
-        <div style="background: #ffffff; padding: 25px; border-radius: 15px; border: 1px solid #d4cf92; box-shadow: 0 10px 20px rgba(0,0,0,0.05); font-family: 'Segoe UI', sans-serif; width: calc(100% + 20px); margin-left: -10px; box-sizing: border-box; z-index: 2;">
+        <div style="background: #ffffff; padding: 25px; border-radius: 15px; border: 1px solid #d4cf92; box-shadow: 0 10px 20px rgba(0,0,0,0.05); font-family: 'Segoe UI', sans-serif; width: calc(100% + 20px); margin-left: -10px; box-sizing: border-box; z-index: 2; position: relative;">
+            <div style="position: absolute; top: -12px; left: 50%; transform: translateX(-50%); width: 24px; height: 24px; background: #d32f2f; border-radius: 50%; box-shadow: 0 4px 6px rgba(0,0,0,0.2); z-index: 3;">
+                <div style="position: absolute; top: 4px; left: 4px; width: 8px; height: 8px; background: rgba(255,255,255,0.4); border-radius: 50%;"></div>
+            </div>
+            
             <div style="display: flex; justify-content: space-between; align-items: flex-start; border-bottom: 1px solid #f1f5f9; padding-bottom: 10px; margin-bottom: 12px;">
                 <h5 style="margin: 0; font-size: 14px; color: #d32f2f; font-weight: 900; text-transform: uppercase;">Next Event Focus & Updates</h5>
                 <span style="font-size: 10px; color: #94a3b8; font-weight: 800; text-transform: uppercase;">Spring Opener Technical Memo</span>
