--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -250,7 +250,7 @@
     <div style="display: flex; align-items: center; justify-content: center; gap: 10px; margin-top: 10px;">
       <div style="height: 2px; width: 30px; background: #c98a2e;"></div>
       <p style="font-size: 15px; color: #666; margin: 0; font-weight: 600; letter-spacing: 0.5px; text-transform: uppercase;">
-        UTSA Roadrunners
+        JOSHUA HONG
       </p>
       <div style="height: 2px; width: 30px; background: #c98a2e;"></div>
     </div>
