--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -617,7 +617,8 @@
 
   
 
-<div class="current-focus-section" style="max-width: 900px; margin: 60px auto 40px; padding: 0 20px; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
+
+  <div class="current-focus-section" style="max-width: 900px; margin: 60px auto 40px; padding: 0 20px; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
     <a id="current-focus" style="display: block; position: relative; top: -100px; visibility: hidden;"></a>
     <div style="border-bottom: 2px solid #0c2340; padding-bottom: 20px; margin-bottom: 40px; text-align: center;">
         <h1 style="margin: 0; color: #0c2340; font-size: 26px; letter-spacing: 2px; font-weight: 900; text-transform: uppercase;">
@@ -671,8 +672,11 @@
         </div>
 
         <div style="background: #ffffff; padding: 25px; border-radius: 15px; border: 1px solid #d4cf92; box-shadow: 0 10px 20px rgba(0,0,0,0.05); font-family: 'Segoe UI', sans-serif; width: calc(100% + 20px); margin-left: -10px; box-sizing: border-box; z-index: 2; position: relative;">
-            <div style="position: absolute; top: -12px; left: 50%; transform: translateX(-50%); width: 24px; height: 24px; background: #d32f2f; border-radius: 50%; box-shadow: 0 4px 6px rgba(0,0,0,0.2); z-index: 3;">
-                <div style="position: absolute; top: 4px; left: 4px; width: 8px; height: 8px; background: rgba(255,255,255,0.4); border-radius: 50%;"></div>
+            <div style="position: absolute; top: -25px; left: 50%; transform: translateX(-50%) rotate(15deg); width: 30px; height: 50px; z-index: 3; pointer-events: none;">
+                <div style="position: absolute; top: 20px; left: 14px; width: 2px; height: 25px; background: linear-gradient(to right, #94a3b8, #f1f5f9, #64748b); box-shadow: 1px 1px 2px rgba(0,0,0,0.2);"></div>
+                <div style="position: absolute; top: 0; left: 3px; width: 24px; height: 24px; background: #d32f2f; border-radius: 50%; box-shadow: 2px 4px 6px rgba(0,0,0,0.3);">
+                    <div style="position: absolute; top: 4px; left: 4px; width: 8px; height: 8px; background: rgba(255,255,255,0.4); border-radius: 50%;"></div>
+                </div>
             </div>
             
             <div style="display: flex; justify-content: space-between; align-items: flex-start; border-bottom: 1px solid #f1f5f9; padding-bottom: 10px; margin-bottom: 12px;">
@@ -696,6 +700,7 @@
         </div>
     </div>
 </div>
+  
 
   
 
