--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -618,7 +618,12 @@
   
 
 
-  <div class="current-focus-section" style="max-width: 900px; margin: 60px auto 40px; padding: 0 20px; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
+
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Nanum+Pen+Script&display=swap');
+</style>
+
+<div class="current-focus-section" style="max-width: 900px; margin: 60px auto 40px; padding: 0 20px; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
     <a id="current-focus" style="display: block; position: relative; top: -100px; visibility: hidden;"></a>
     <div style="border-bottom: 2px solid #0c2340; padding-bottom: 20px; margin-bottom: 40px; text-align: center;">
         <h1 style="margin: 0; color: #0c2340; font-size: 26px; letter-spacing: 2px; font-weight: 900; text-transform: uppercase;">
@@ -653,7 +658,7 @@
                 <span style="font-size: 20px; color: #0c2340; font-weight: 900; font-family: 'Segoe UI', sans-serif;">01.</span>
                 <div>
                     <h4 style="margin: 0; font-size: 15px; color: #0c2340; font-weight: 900; font-family: 'Segoe UI', sans-serif; text-transform: uppercase; background: rgba(0,0,0,0.05); display: inline-block; padding: 0 5px;">R3 Technical Feedback</h4>
-                    <p style="margin: 8px 0 0 0; font-size: 14.5px; color: #2c3e50; line-height: 28px; font-weight: 500; font-family: 'Segoe UI', sans-serif;">
+                    <p style="margin: 8px 0 0 0; font-size: 19px; color: #2c3e50; line-height: 28px; font-weight: 500; font-family: 'Nanum Pen Script', cursive;">
                         <strong>Status:</strong> Increased yardage applied under narrow fairway/high-wind conditions. Driver and long-iron dispersion data recorded for technical adjustment and subsequent training. <br>
                         <strong>Focus:</strong> Maintaining consistent short-game execution (wedge/putting) while prioritizing dispersion recalibration.
                     </p>
@@ -664,7 +669,7 @@
                 <span style="font-size: 20px; color: #0c2340; font-weight: 900; font-family: 'Segoe UI', sans-serif;">02.</span>
                 <div>
                     <h4 style="margin: 0; font-size: 15px; color: #0c2340; font-weight: 900; font-family: 'Segoe UI', sans-serif; text-transform: uppercase; background: rgba(0,0,0,0.05); display: inline-block; padding: 0 5px;">Corrective Training</h4>
-                    <p style="margin: 8px 0 0 0; font-size: 14.5px; color: #2c3e50; line-height: 28px; font-weight: 500; font-family: 'Segoe UI', sans-serif;">
+                    <p style="margin: 8px 0 0 0; font-size: 19px; color: #2c3e50; line-height: 28px; font-weight: 500; font-family: 'Nanum Pen Script', cursive;">
                         <strong>Feb 4:</strong> Technical training session conducted to address driver dispersion and long-iron control in preparation for the home tournament (Feb 23–24). Academic scheduling adjustments finalized to maintain balance with upcoming competition commitments.
                     </p>
                 </div>
@@ -684,11 +689,11 @@
                 <span style="font-size: 10px; color: #94a3b8; font-weight: 800; text-transform: uppercase;">Spring Opener Technical Memo</span>
             </div>
             <div style="display: flex; flex-wrap: wrap; gap: 20px;">
-                <p style="margin: 0; font-size: 13.5px; color: #0c2340; font-weight: 700; line-height: 1.6; flex: 1; min-width: 240px;">
+                <p style="margin: 0; font-size: 18px; color: #0c2340; font-weight: 700; line-height: 1.2; flex: 1; min-width: 240px; font-family: 'Nanum Pen Script', cursive;">
                     • Target: Home-Field Team Title<br>
                     • Drills: Dispersion Control (w/ Bryan)
                 </p>
-                <p style="margin: 0; font-size: 13.5px; color: #0c2340; font-weight: 700; line-height: 1.6; flex: 1; min-width: 240px;">
+                <p style="margin: 0; font-size: 18px; color: #0c2340; font-weight: 700; line-height: 1.2; flex: 1; min-width: 240px; font-family: 'Nanum Pen Script', cursive;">
                     • Academic: Coursework management<br>
                     • Status: Training Schedule Optimized
                 </p>
